- Change width of context-information left and right items to avoid wrapping down to 1024px
git-svn-id: file:///home/patrick.allaert/svn-git/ezp-repo/ezpublish/trunk@24791 a01eee8c-daba-0310-acae-fa49f3023285

--- a/design/admin2/stylesheets/pagelayout.css
+++ b/design/admin2/stylesheets/pagelayout.css
@@ -538,15 +538,25 @@ span.classattribute-description:hover, p.class-description:hover, div.context-in
 
 div.context-information p.left
 {
-  width: 48%;
+  width: 47%;
   float: left;
 }
 
 div.context-information p.right
 {
-  width: 48%;
+  width: 52%;
   float: right;
   text-align: right;
+}
+
+div.content-navigation div.context-information p.left
+{
+  width: 69%;
+}
+
+div.content-navigation div.context-information p.right
+{
+  width: 30%;
 }
 
 div.context-block
